--- a/device-2/config.cfg
+++ b/device-2/config.cfg
@@ -17,5 +17,5 @@ VisitorMode=15
 #Daymode=16
 
 [senz]
-s1=GET #pubkey @x5
-s2=SHARE #gpio12 #gpio13 #photo #msg @x5
+#s1=GET #pubkey @x5
+s2=SHARE #gpio12 #gpio13 #photo #tp ##msg @x5
