--- a/device-1/config.cfg
+++ b/device-1/config.cfg
@@ -17,6 +17,11 @@ VisitorMode=15
 #Daymode=16
 
 [senz]
-s1=GET #pubkey @x6
-s2=PUT #gpio12 ON @x6
-s2=GET #gpio12 @x6
+#s1=GET #pubkey @x6
+#s2=PUT #gpio12 ON @x6
+s3=GET #gpio12 @x6
+s4=GET #tp @x6
+s5=GET #photo @x6
+#s4=PUT #gpio13 OFF @x6
+#s5=GET #gpio13 @x6
+
