--- a/device-2/config.cfg
+++ b/device-2/config.cfg
@@ -18,4 +18,6 @@ VisitorMode=15
 
 [senz]
 #s1=GET #pubkey @x5
-s2=SHARE #gpio12 #gpio13 #photo #tp ##msg @x5
+#s2=SHARE #gpio12 #gpio13 #photo #tp ##msg @x5
+s3=SHARE #key #gps @x5
+
